<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="menu_title_settings">Settings</string>
    <string name="stars">Stars</string>
    <string name="loading_error_title">Something went wrong</string>
    <string name="loading_error_message">An alien is probably blocking your signal.</string>
    <string name="retry_button_title">Retry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_holder_title">Card Holder</string>
    <string name="card_expire_title">Expire Date</string>
    <string name="add_new_card">Add new card</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="select_card_type">Select Card type</string>
    <string name="order_card">Order Card</string>
    <string name="order_new_card">Order New Card</string>
    <string name="card_added_notification">Your Card Has been added</string>
    <string name="card_removed_notification">Your Card Has been removed</string>
    <string name="remove_card">Remove Card</string>
    <string name="are_you_sure_delete">You will delete card permanently</string>
    <string name="remove_card_toolbar_title">Remove Card</string>
</resources>