<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/card_holder_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:enabled="false"
            android:hint="@string/card_holder_name"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/card_type"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_border_spinner"
            android:text="@string/select_card_type"
            android:textColor="@color/pureblack"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/card_holder_name" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/card_currency"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_border_spinner"
            android:text="@string/select_card_type"
            android:textColor="@color/pureblack"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/card_type" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/order_new_card_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_marginTop="24dp"
            android:enabled="false"
            android:text="@string/order_card"
            app:backgroundTint="@color/button_state_color"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/card_currency" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
