<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_info"
            style="@style/MyAzercell_Cardview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rootForBackSide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="1"
                android:background="@color/card_view_background"
                android:minHeight="200dp"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/card_network_type"
                    android:layout_width="80dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_mastercard_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/card_balance"
                    style="@style/Title_H1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_network_type" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/card_pan"
                    style="@style/Title_H3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_balance"
                    app:layout_constraintVertical_bias="0.2" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/card_holder_name_title"
                    style="@style/Body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/card_holder_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_pan" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/card_holder_name"
                    style="@style/Subtitle_H1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_holder_name_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/card_expire_date_title"
                    style="@style/Body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/card_expire_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_pan" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/card_expire_date"
                    style="@style/Subtitle_H1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@+id/card_expire_date_title"
                    app:layout_constraintTop_toBottomOf="@+id/card_expire_date_title" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/remove_card_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/remove_card"
            app:backgroundTint="@color/button_state_color"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/card_info" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
